--- a/trunk/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/trunk/InfServer.DBComm/InfServer.DBComm.csproj
@@ -77,6 +77,8 @@
   <ItemGroup>
     <Compile Include="C2SFactory.cs" />
     <Compile Include="Helpers\Database.cs" />
+    <Compile Include="Packets\Commands\Chat\CS_Online.cs" />
+    <Compile Include="Packets\Commands\Chat\SC_Online.cs" />
     <Compile Include="Packets\Commands\Chat\SC_Find.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Find.cs" />
     <Compile Include="Packets\Login\CS_Auth.cs" />
