--- a/trunk/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/trunk/InfServer.DBComm/InfServer.DBComm.csproj
@@ -85,9 +85,18 @@
     <Compile Include="Packets\Login\CS_PlayerLogin.cs" />
     <Compile Include="Packets\Login\SC_Auth.cs" />
     <Compile Include="Packets\Login\SC_PlayerLogin.cs" />
+    <Compile Include="Packets\Social\Chats\SC_LeaveChat.cs" />
+    <Compile Include="Packets\Social\Chats\CS_LeaveChat.cs" />
+    <Compile Include="Packets\Social\Chats\SC_PrivateChat.cs" />
+    <Compile Include="Packets\Social\Chats\CS_JoinChat.cs" />
+    <Compile Include="Packets\Social\Chats\CS_PrivateChat.cs" />
+    <Compile Include="Packets\Social\Chats\SC_JoinChat.cs" />
+    <Compile Include="Packets\Social\SC_Chat.cs" />
+    <Compile Include="Packets\Social\Whisper\CS_Whisper.cs" />
     <Compile Include="Packets\Player\CS_PlayerBanner.cs" />
     <Compile Include="Packets\Player\CS_PlayerLeave.cs" />
     <Compile Include="Packets\Player\CS_PlayerUpdate.cs" />
+    <Compile Include="Packets\Social\Whisper\SC_Whisper.cs" />
     <Compile Include="Packets\Stats\CS_PlayerStatsRequest.cs" />
     <Compile Include="Packets\Stats\SC_PlayerStatsResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
