--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -156,6 +156,7 @@
     <Compile Include="Bots\DuelBot\DuelBot.cs" />
     <Compile Include="Bots\FollowBot\FollowBot.cs" />
     <Compile Include="GameTypes\Dodgeball\Dodgeball.cs" />
+    <Compile Include="GameTypes\Frontlines\TDM.cs" />
     <Compile Include="GameTypes\TDM\TDM.cs" />
     <Compile Include="GameTypes\CTF\CTF_OvD\OvD.cs" />
     <Compile Include="GameTypes\CTF\CTF.cs" />
