Organized some stuff, created some PacketIDs in different areas to make keeping track of TypeIDs easier in the future. ?arena will also display what arena the player is currently in.

--- a/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/InfServer.DBComm/InfServer.DBComm.csproj
@@ -77,6 +77,7 @@
   <ItemGroup>
     <Compile Include="C2SFactory.cs" />
     <Compile Include="Helpers\Database.cs" />
+    <Compile Include="Helpers\PacketIDs.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Online.cs" />
     <Compile Include="Packets\Commands\Chat\SC_Online.cs" />
     <Compile Include="Packets\Commands\Chat\SC_Find.cs" />
