--- a/trunk/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/trunk/InfServer.DBComm/InfServer.DBComm.csproj
@@ -78,9 +78,8 @@
     <Compile Include="C2SFactory.cs" />
     <Compile Include="Helpers\Database.cs" />
     <Compile Include="Helpers\PacketIDs.cs" />
+    <Compile Include="Packets\Commands\Chat\CS_Query.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Online.cs" />
-    <Compile Include="Packets\Commands\Chat\SC_Online.cs" />
-    <Compile Include="Packets\Commands\Chat\SC_Find.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Find.cs" />
     <Compile Include="Packets\Login\CS_Auth.cs" />
     <Compile Include="Packets\Login\CS_PlayerLogin.cs" />
