Defined CS_Query for querying the database server for different kinds of information, will be expanded in the future.
Implemented ?accountinfo and *whois

Changed the additional assets directory, they now load from ../Global

--- a/InfServer/InfServer.csproj
+++ b/InfServer/InfServer.csproj
@@ -183,6 +183,7 @@
     <Compile Include="Game\Assets\AssetManager.cs" />
     <Compile Include="Game\Commands\Chat\Commands.cs" />
     <Compile Include="Game\Commands\Game\Game.cs" />
+    <Compile Include="Game\Commands\Mod\Account.cs" />
     <Compile Include="Game\Commands\Mod\Basic.cs" />
     <Compile Include="Game\Commands\Mod\Bots.cs" />
     <Compile Include="Game\Commands\Mod\Vehicles.cs" />
