Started on some Helpers for Scripts, for things like including generic functions that every zone should take advantage of instead of duplicating over and over. Currently only has scrambleTeams, feel free to add to it.

--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -172,6 +172,7 @@
     <Compile Include="GameTypes\ZombieZone\ZombieTransitions.cs" />
     <Compile Include="GameTypes\ZombieZone\ZombieZone.cs" />
     <Compile Include="GameTypes\ZombieZone\ZombieZone.Stats.cs" />
+    <Compile Include="Helpers\Functions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
