--- a/trunk/InfClient/InfClient.csproj
+++ b/trunk/InfClient/InfClient.csproj
@@ -5,7 +5,7 @@
     <Platform Condition=" '$(Platform)' == '' ">x86</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{3538C998-7DFC-44A7-AA88-7E2D9568E146}</ProjectGuid>
+    <ProjectGuid>{BBE33154-D8E9-49A7-A8DA-F3ACA2D015A1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>InfClient</RootNamespace>
@@ -34,12 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="InfServer.DBComm">
-      <HintPath>..\..\..\trunk\bin\InfServer.DBComm.dll</HintPath>
-    </Reference>
-    <Reference Include="InfServer.Network">
-      <HintPath>..\..\..\trunk\bin\InfServer.Network.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -52,6 +46,24 @@
     <Compile Include="Client.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protocol\C2SFactory.cs" />
+    <Compile Include="Protocol\S2CFactory.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="app.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\InfServer.Network\InfServer.Network.csproj">
+      <Project>{5D556DA8-1878-46F3-8064-AC5338832BB4}</Project>
+      <Name>InfServer.Network</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\InfServer\InfServer.csproj">
+      <Project>{D5FE7923-118B-4DBE-B18C-26DBEC0A18F8}</Project>
+      <Name>InfServer</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
