--- a/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/InfServer.DBComm/InfServer.DBComm.csproj
@@ -99,6 +99,7 @@
     <Compile Include="Packets\Social\Whisper\SC_Whisper.cs" />
     <Compile Include="Packets\Stats\CS_PlayerStatsRequest.cs" />
     <Compile Include="Packets\Stats\SC_PlayerStatsResponse.cs" />
+    <Compile Include="Packets\Zone\Disconnect.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="S2CFactory.cs" />
     <Compile Include="Structures\Zone.cs" />
