--- a/trunk/InfServer/InfServer.csproj
+++ b/trunk/InfServer/InfServer.csproj
@@ -287,6 +287,7 @@
     <Compile Include="Protocol\Packets\Login\SC_AssetUpdateInfo.cs" />
     <Compile Include="Protocol\Packets\Misc\CS_FileSend.cs" />
     <Compile Include="Protocol\Packets\Security\SC_RegQuery.cs" />
+    <Compile Include="Protocol\Packets\State\SC_ZoneList.cs" />
     <Compile Include="Protocol\Packets\Stats\CS_ChartRequest.cs" />
     <Compile Include="Protocol\Packets\Stats\SC_Chart.cs" />
     <Compile Include="Protocol\Packets\Misc\SC_FileSend.cs" />
