The idea of this commit is to make future checkouts of the repo build with minimal user modifications. This commit will probably break your current server if it's using a connection to the database. Made quite a few changes to help facilitate future updates regarding directory server (XML file will be phased out, back to original method of loading zones into directory server). Take a look at the new /server.xml for how you should format it. Removed useless crap from the repo, no need for those files to be checked out. Added a new design file (Design Files/Infantry.psd), and included assets.xml (trunk/Global/assets.xml), as loading the server without it might break it. Also included a project I forgot to commit, BloExtractor (pass a dir to it via cmdline, it extracts all blos into folders with info/previews) Introduced new Team object accessors, fixed ?team to use said Team object accessors, created new ZoneServer object accessors, fixed ?zonelist (mostly), fixed the SC_ZoneList packet to use new public properties. Some other stuff here and there, blah blah.

--- a/InfServer/InfServer.csproj
+++ b/InfServer/InfServer.csproj
@@ -250,6 +250,7 @@
     <Compile Include="Protocol\Packets\Game\Action\SC_ShopFinished.cs" />
     <Compile Include="Protocol\Packets\Game\SC_BindVehicle.cs" />
     <Compile Include="Protocol\Packets\Game\SC_ChangeTeam.cs" />
+    <Compile Include="Protocol\Packets\Game\State\SC_BallState.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_Flags.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_ClearProjectiles.cs" />
     <Compile Include="Protocol\Packets\Game\State\SC_LIOUpdates.cs" />
