--- a/trunk/InfServer/InfServer.csproj
+++ b/trunk/InfServer/InfServer.csproj
@@ -93,11 +93,11 @@
   <ItemGroup>
     <Reference Include="CSScriptLibrary, Version=2.1.0.0, Culture=neutral, PublicKeyToken=70fcc3d18c749033, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\CSScriptLibrary.dll</HintPath>
+      <HintPath>..\bin\CSScriptLibrary.dll</HintPath>
     </Reference>
     <Reference Include="Ionic.Zlib, Version=1.9.1.5, Culture=neutral, PublicKeyToken=edbe51ad942a3f5c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\lib\Ionic.Zlib.dll</HintPath>
+      <HintPath>..\bin\Ionic.Zlib.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
