--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -164,6 +164,9 @@
     <Compile Include="GameTypes\Frontlines\TDM.cs" />
     <Compile Include="GameTypes\HQ\Events.cs" />
     <Compile Include="GameTypes\HQ\Objects\HQ.cs" />
+    <Compile Include="GameTypes\KOTH\KOTH.cs" />
+    <Compile Include="GameTypes\SKCTF\Objects\Tickets.cs" />
+    <Compile Include="GameTypes\SKCTF\SKCTF.cs" />
     <Compile Include="GameTypes\TDM\TDM.cs" />
     <Compile Include="GameTypes\CTF\CTF_OvD\OvD.cs" />
     <Compile Include="GameTypes\CTF\CTF.cs" />
