--- a/InfServer.Database/InfServer.Database.csproj
+++ b/InfServer.Database/InfServer.Database.csproj
@@ -77,6 +77,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Infantry.dbml</DependentUpon>
     </Compile>
+    <Compile Include="Logic\Bans.cs" />
     <Compile Include="Logic\Chats.cs" />
     <Compile Include="Logic\Commands\Chat.cs" />
     <Compile Include="Logic\Login.cs" />
