All moderator commands are now logged to the database Added *history [pagenum] to look through logs of moderator commands Further updated database structure Fixed (I think?) issue with players looking like they're disconnecting whenever they get summoned or walk through portals Removed useless packet definitions Other small updates I really don't feel like listing

--- a/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/InfServer.DBComm/InfServer.DBComm.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Packets\Login\SC_PlayerLogin.cs" />
     <Compile Include="Packets\Social\Chats\SC_LeaveChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_LeaveChat.cs" />
+    <Compile Include="Packets\Social\SC_ModCommand.cs" />
     <Compile Include="Packets\Social\Chats\SC_PrivateChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_JoinChat.cs" />
     <Compile Include="Packets\Social\Chats\CS_PrivateChat.cs" />
