--- a/trunk/bin/scripts/Scripts.csproj
+++ b/trunk/bin/scripts/Scripts.csproj
@@ -165,7 +165,7 @@
     <Compile Include="GameTypes\HQ\Events.cs" />
     <Compile Include="GameTypes\HQ\Objects\HQ.cs" />
     <Compile Include="GameTypes\KOTH\KOTH.cs" />
-    <Compile Include="GameTypes\SKCTF\Objects\Tickets.cs" />
+    <Compile Include="GameTypes\SKCTF\Objects\Points.cs" />
     <Compile Include="GameTypes\SKCTF\SKCTF.cs" />
     <Compile Include="GameTypes\TDM\TDM.cs" />
     <Compile Include="GameTypes\CTF\CTF_OvD\OvD.cs" />
