Big overhaul to SKCTF gametype. "Ticket" system changed to "Points" system, and supports an unlimited amount of teams. Updates to ScriptHelpers (added string toOrdinal(int) function to return ordinal string of an int: ex 1=1st, 10=10th, etc) Fixed some command logging bug.

--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -165,7 +165,7 @@
     <Compile Include="GameTypes\HQ\Events.cs" />
     <Compile Include="GameTypes\HQ\Objects\HQ.cs" />
     <Compile Include="GameTypes\KOTH\KOTH.cs" />
-    <Compile Include="GameTypes\SKCTF\Objects\Tickets.cs" />
+    <Compile Include="GameTypes\SKCTF\Objects\Points.cs" />
     <Compile Include="GameTypes\SKCTF\SKCTF.cs" />
     <Compile Include="GameTypes\TDM\TDM.cs" />
     <Compile Include="GameTypes\CTF\CTF_OvD\OvD.cs" />
