Huge update, first implementation of squads! Hopefully it works the first time. Give it a try the next time the whole server (and database) gets recycled and report any bugs you may find. Also, some fixes to SKCTF gametype. Use it in your zones, it's fun :)

--- a/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/InfServer.DBComm/InfServer.DBComm.csproj
@@ -79,6 +79,7 @@
     <Compile Include="Helpers\Database.cs" />
     <Compile Include="Helpers\PacketIDs.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Query.cs" />
+    <Compile Include="Packets\Commands\Chat\CS_Squads.cs" />
     <Compile Include="Packets\Login\CS_Auth.cs" />
     <Compile Include="Packets\Login\CS_PlayerLogin.cs" />
     <Compile Include="Packets\Login\SC_Auth.cs" />
