Update to Assets Includes a new [] Block for .cfg Files.
Example:

[Addon]
AidEnabled=1
AidLogic=14400
AllowTeamOwnership=1

Belongs under the [Message] Block.

Implemented a bool that flags whether a command should be accessible by a developer or not (currently the highest permission level, Very afro-rigged for now, will rewrite entire permission level system later on.)

--- a/Assets/Assets.csproj
+++ b/Assets/Assets.csproj
@@ -163,6 +163,7 @@
     <Compile Include="Cfg\CfgInfo.WebMenu.cs" />
     <Compile Include="Cfg\CfgInfo.ZoneStat.cs" />
     <Compile Include="Cfg\ConfigFile.cs" />
+    <Compile Include="Cfg\CfgInfo.Addon.cs" />
     <Compile Include="Itm\ItemFile.cs" />
     <Compile Include="Itm\ItmInfo.Ammo.cs" />
     <Compile Include="Itm\ItmInfo.ControlItem.cs" />
