Implemented a temporary patch for a bug that allowed players to modify game files at will, this should nullify most "hacking" claims for awhile.
Will be replacing this patch and improving server security as time progresses.

Also a few other unnoted changes that I cannot recall at this moment, most likely stuff related to dispatching player bans.

--- a/InfServer/InfServer.csproj
+++ b/InfServer/InfServer.csproj
@@ -288,6 +288,8 @@
     <Compile Include="Protocol\Packets\Login\SC_AssetUpdate.cs" />
     <Compile Include="Protocol\Packets\Login\SC_AssetUpdateInfo.cs" />
     <Compile Include="Protocol\Packets\Misc\CS_FileSend.cs" />
+    <Compile Include="Protocol\Packets\Security\CS_SecurityCheck.cs" />
+    <Compile Include="Protocol\Packets\Security\SC_SecurityCheck.cs" />
     <Compile Include="Protocol\Packets\Security\SC_RegQuery.cs" />
     <Compile Include="Protocol\Packets\State\SC_ZoneList.cs" />
     <Compile Include="Protocol\Packets\Stats\CS_ChartRequest.cs" />
