--- a/InfServer.DBComm/InfServer.DBComm.csproj
+++ b/InfServer.DBComm/InfServer.DBComm.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Helpers\PacketIDs.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Query.cs" />
     <Compile Include="Packets\Commands\Chat\CS_Squads.cs" />
+    <Compile Include="Packets\Commands\Mod\CS_Ban.cs" />
     <Compile Include="Packets\Login\CS_Auth.cs" />
     <Compile Include="Packets\Login\CS_PlayerLogin.cs" />
     <Compile Include="Packets\Login\SC_Auth.cs" />
