Sorry for delayed and large commit. ~90% of this is Mizz [Mizz the best] -Commit by Mizz and kon -Thanks to aaerox, fowl, jovan and super man
-Fixed *gkill and added several function (refer to code)
-Fixed flag spawns on restricted terrains [more to do still]
-Fixed bot kill rewards breaking Zombie Zone
-Fixed ?drop not working in certain zones
-Fixed *speclock to not speclock the entire arena
-Fixed lag checking
-Fixed history logging
-Fixed "alias" bug [Error that caused clients to hang when entering zones]
-Fixed bounty not resetting when players switch teams
-Fixed bounty update after death
-Fixed summon bug where you could summon enemy players
-Fixed random item errors, such as players buying items they are not suppose to own

-Added *wipecharacter, *removealias, *transferalias, *scramble
-Added and Fixed several arena breakdowns
-Added BugHunt script
-Added LaserTag script [aredpillow]
-Added temporary game stat saving for specific zones. Will replace with a fix to saving game stats when players leave and come back.
-Added terrain inactivity timer


-Scramble teams now goes by the CFG file instead of being handled in each zone script
-Users now have to wait 10 seconds before attempting to enter a zone after leaving one. [super man inspired]
-Small changes to ?chat list
-Working on fix in KOTH script [fails on certain timer updates to client, but timer works server-side and update is made when crown expires] [fowl inspired]
-Other fixes that are being worked on

--- a/bin/scripts/Scripts.csproj
+++ b/bin/scripts/Scripts.csproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <Compile Include="Bots\DuelBot\DuelBot.cs" />
     <Compile Include="Bots\FollowBot\FollowBot.cs" />
+    <Compile Include="GameTypes\BugHunt\BugHunt.cs" />
     <Compile Include="GameTypes\CTF\OGCTF.cs" />
     <Compile Include="GameTypes\CTFHQ\CTFHQ.cs" />
     <Compile Include="GameTypes\CTFHQ\Objects\Headquarters.cs" />
